코드리팩토링 및 프로필 이미지 가져오는 로직 추